# odfsig

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  HACKING.adoc  HACKING.md  LICENSE  Makefile  NEWS.adoc  NEWS.md  README.adoc  README.md  appveyor.yml  main.cxx  odfsig.cxx  odfsig.hxx  pdfiumsig.cpp
.github/workflows/: automerge.yml  tests.yml
app/source/: main.cxx
apps/: CMakeLists.txt  app.cxx  fuzz.cxx
cmake/: FindGtest.cmake  FindZip.cmake  HandleAsciidoc.cmake  HandleOdfsigOptions.cmake  HandlePandoc.cmake
core/include/: odfsig.hxx
core/qa/: odfsigtest.cxx
core/qa/data/: good.odt
core/qa/keys/: example-odfsig-alice.cert.p12
core/qa/keys/templates/: root.cnf
core/source/: odfsig.cxx
docs/: CMakeLists.txt  odfsig.adoc  odfsig.md
guide/: book.toml  matomo.js
guide/src/: README.md  SUMMARY.md  hacking.md  news.md
include/: CMakeLists.txt
include/odfsig/: crypto.hxx  lib.hxx  string.hxx  version.hxx.in
scripts/: autogen.input  build.bat  build.ps1  build.sh  ci-build.sh  coverage.sh  extern.py  pack.py  travis.sh  up.sh
src/: CMakeLists.txt  crypto-cng.cxx  crypto-nss.cxx  lib.cxx  main.cxx  string.cxx  zip.cxx  zip.hxx
tests/: CMakeLists.txt  testlib.cxx
tests/data/: bad.odt  empty-stream.odt  no-stream.odt
tests/keys/: ca-chain.cert.der  ca-chain.cert.pem  example-odfsig-bob.cert.p12  generate.sh
tests/keys/templates/: intermediate.cnf
util/iwyu/: mapping.imp
